examples/errors/04_bad_procedure_params/bad_procedure_params.txy
proc sum(a, b: int)
    println(string(a + b));
endproc;

proc main()
    sum(1, 2.5f);
endproc;